--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -3,6 +3,9 @@ $white-color: #fff;
 $black-color: #0F0E08;
 $green-color: #1A5A4C;
 $height-burger: 12px;
+$width-burger: 18px;
 $height-burger-line: 2px;
 $burger-padding-block: 6px;
+$burger-padding-inline: 3px;
 $position-burger-line: ($height-burger / 2) - ($height-burger-line / 2) + $burger-padding-block;
+$header-top-padding: 9px;
