--- a/src/styles/blocks/_arrow-link.scss
+++ b/src/styles/blocks/_arrow-link.scss
@@ -1,9 +1,13 @@
 .arrow-link {
-  max-width: 70px;
-  width: 100%;
-  height: 70px;
+  width: 70px;
+  min-height: 70px;
 
   display: flex;
   justify-content: center;
   align-items: center;
+
+  @include phone {
+    width: 50px;
+    min-height: 50px;
+  }
 }
