--- a/src/styles/blocks/_logo-link.scss
+++ b/src/styles/blocks/_logo-link.scss
@@ -1,3 +1,9 @@
 .logo-link {
-  display: block;
+  cursor: pointer;
+
+  &__image {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
 }
