--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -73,8 +73,9 @@
       &::before {
         content: '';
         position: absolute;
+        z-index: -1;
         height: 100%;
-        width: 20px;
+        width: 50px;
         background-color: $white-color;
       }
 
@@ -198,7 +199,7 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 59.76vh;
+      height: 75vh;
 
       background-image: url(../images/header-background-image-small.png);
       background-repeat: no-repeat;
