--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -6,6 +6,7 @@
     font-weight: $font-weight-base;
     font-size: $font-size-base;
     color: $color-base;
+    box-sizing: border-box;
 
     @include content-padding-inline;
   }
