--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -4,7 +4,8 @@
 
 .slider {
   position: relative;
-  width: 280px;
+  margin-inline: 20px;
+  width: 100%;
   overflow: hidden;
   margin-inline: auto;
 }
