--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,10 @@
 @import '../styles/blocks/hero';
 @import '../styles/blocks/menu';
 @import '../styles/blocks/page';
+@import '../styles/blocks/current-events';
+@import '../styles/blocks/lection';
 @import '../styles/blocks/main-info';
+@import '../styles/blocks/galery';
 @import '../styles/blocks/slider';
+@import '../styles/blocks/subscription';
 
