--- a/src/styles/blocks/galery.scss
+++ b/src/styles/blocks/galery.scss
@@ -1,14 +1,14 @@
-.main {
+.galery {
   @include page-grid;
 
   grid-column: 1 / -1;
-  margin-top: 70px;
-
-  &__title {
+  margin-bottom: 50px;
+  &-title {
     grid-column: 1 / -1;
     font-size: 36px;
-    line-height: 36px;
     font-weight: 700;
+    color: #0f0e08;
+    margin-top: 100px;
     text-align: center;
   }
 }
