--- a/src/styles/blocks/reset.scss
+++ b/src/styles/blocks/reset.scss
@@ -17,6 +17,10 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
 }
 
 /* HTML5 display-role reset for older browsers */
