--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,24 +1,24 @@
 @mixin desktop {
-  @media(max-width: 1440px) {
+  @media (max-width: 1440px) {
     @content;
   }
 }
 
 @mixin tablet {
-  @media(max-width: 1280px) {
+  @media (max-width: 1280px) {
+    @content;
+  }
+}
+
+@mixin small-tablet {
+  @media (max-width: 1050px) {
     @content;
   }
 }
 
 @mixin phone {
-  @media(max-width: 640px) {
+  @media (max-width: 640px) {
     @content;
   }
 }
 
-@mixin height-header-background {
-  @include desktop {
-    min-height: 100vh;
-    height: 100%;
-  }
-}
