--- a/src/styles/blocks/_arrow-link.scss
+++ b/src/styles/blocks/_arrow-link.scss
@@ -6,7 +6,11 @@
   justify-content: center;
   align-items: center;
 
-  @include phone {
+  &__cursor {
+    transition: all $transition-value;
+  }
+
+  @include big-phone {
     width: 50px;
     min-height: 50px;
   }
