--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,7 @@
 @import './utils';
 @import './fonts/ibm-plex-sans';
 @import './fonts/montserrat';
+@import './blocks/menu';
 @import './blocks/modifiers';
 @import './blocks/page';
 @import './blocks/container';
@@ -8,3 +9,5 @@
 @import './blocks/icon';
 @import './blocks/arrow-link';
 @import './blocks/logo-link';
+@import './blocks/info';
+@import './blocks/nav';
