--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -16,9 +16,15 @@
   }
 }
 
-@mixin phone {
-  @media (max-width: 640px) {
+@mixin big-phone {
+  @media (max-width: 680px) {
     @content;
+  }
+}
+
+@mixin phone {
+  @media (max-width: 498px) {
+    @content
   }
 }
 
