--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -4,9 +4,45 @@
 
   &__body {
     margin: 0;
+
+    &::before {
+      content: '';
+      width: 100%;
+      height: 100%;
+      position: fixed;
+      z-index: 2;
+      background-color: $black-color;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity $transition-value ease;
+    }
+  }
+
+
+  &__menu {
+    position: fixed;
+    z-index: 3;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 233px;
+    background-color: $green-color;
+    transform: translateY(-101%);
+
+    transition: all $transition-value;
   }
 }
 
 h1,h2,h3,h4,h5,h6 {
   margin: 0;
+}
+
+ul, ol {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
 }
