--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -24,7 +24,14 @@
 
 @mixin phone {
   @media (max-width: 498px) {
-    @content
+    @content;
   }
 }
 
+@mixin header-top-indent($property) {
+  #{$property}: 39px;
+
+  @include big-phone {
+    #{$property}: 27px;
+  }
+}
