--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -10,3 +10,4 @@ $burger-padding-inline: 3px;
 $position-burger-line: ($height-burger / 2) - ($height-burger-line / 2) + $burger-padding-block;
 $header-top-padding: 9px;
 $arrow-link-in-elements: header__link;
+$header-padding-top: 39px;
