--- a/src/styles/blocks/_info.scss
+++ b/src/styles/blocks/_info.scss
@@ -1,14 +1,48 @@
 .info {
   color: $white-color;
   font-size: 14px;
+  max-width: 370px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
   &__title {
     font-size: 14px;
+    font-weight: 400;
+  }
+
+  &__bottom-wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    gap: 38px;
+
+    @include small-tablet {
+      gap: 30px;
+    }
   }
 
   &__chart {
     font-size: 14px;
     font-weight: 400;
+    line-height: 150%;
+  }
+
+  &__chart-item {
+    text-wrap: nowrap;
+  }
+
+  &__weekends {
+    width: 170px;
+    line-height: 150%;
+
+    @include small-tablet {
+      width: 140px;
+    }
+  }
+
+  &__weekends-text {
     line-height: 150%;
   }
 }
