--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -2,15 +2,28 @@
 
   &__content {
     max-width: 1366px;
-    margin-inline: auto;
     width: 100%;
+    padding-top: $header-padding-top;
+    padding-bottom: 40px;
+    min-height: 145px;
     display: flex;
     justify-content: space-between;
+    gap: 38px;
+
+    @include header-top-indent(padding-top);
+
+    @include small-tablet {
+      gap: 30px;
+    }
+
+    @include big-phone {
+      flex-direction: column;
+    }
   }
 
   &__separator {
     width: 1px;
-    height: 145px;
+    min-height: 100%;
     background-color: $white-color;
     opacity: 0.5;
   }
