--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -1,22 +1,34 @@
 .nav {
+  max-width: 368px;
+  width: 100%;
+  min-height: 96px;
 
   &__list {
-    max-width: 368px;
-    min-height: 96px;
-    width: 100%;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
+    gap: 20px;
 
-    &__item {
-      flex: 0 0 168px;
-      width: 168px;
+    @include small-tablet {
+      max-width: 220px;
     }
+  }
 
-    &__link {
-      display: block;
-      width: 168px;
+  &__column {
+    max-width: 168px;
+    width: 100%;
+    min-height: 96px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 
-    }
+  &__link {
+    line-height: 100%;
+    display: flex;
+    align-items: center;
+  }
+
+  &__link-text {
+    line-height: 100%;
   }
 }
