--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -30,6 +30,10 @@
     transform: translateY(-101%);
 
     transition: all $transition-value;
+
+    @include small-tablet {
+      min-height: 225px;
+    }
   }
 }
 
