--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,5 @@
-$c-gray: #eee;
+$text-color: #0f0e08;
+$bg-color: #ffffff;
+$ff-main: 'IBM Plex Sans', serif;
+$tablet-min-width: 640px;
+$desktop-min-width: 1280px;
