--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,9 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import 'utils/vars';
+@import 'utils/mixins';
+@import 'utils/reset';
+@import 'utils/base';
+@import 'blocks/logo';
+@import 'blocks/icon';
+@import 'blocks/menu';
+@import 'blocks/nav';
+@import 'sections/header.scss';
