--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
-$c-gray: #eee;
+$color-default: #fff;
+$color-base: #0f0e08;
+$color-base-light: #687480;
+$color-secondary: #4e4e4e;
+$color-primary: #1a5a4c;
+$color-accent: #f14a27;
+$font-family-base: 'IBM Plex Sans';
