--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import 'utils/reset';
+@import 'utils/common';
+@import 'blocks/page';
+@import 'blocks/header';
+@import 'blocks/header-img';
+@import 'blocks/menu';
+@import 'blocks/nav';
+@import 'blocks/icon';
+@import 'blocks/main';
+@import 'blocks/events';
+@import 'blocks/gallery';
+@import 'blocks/slider';
+@import 'blocks/subscription';
+@import 'blocks/footer';
