--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -43,9 +43,7 @@
 .page__menu:target ~ .footer::after {
   content: '';
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
+  inset: 0;
   background-color: rgba(0, 0, 0, 0.3);
   pointer-events: none;
   z-index: 1;
