--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,4 +6,8 @@
 @import 'blocks/icon';
 @import 'blocks/menu';
 @import 'blocks/nav';
-@import 'sections/header.scss';
+@import 'blocks/title-h2';
+@import 'blocks/title-h3';
+@import 'blocks/events-item';
+@import 'sections/header';
+@import 'sections/events';
