--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,5 +1,5 @@
 $text-color: #0f0e08;
-$bg-color: #ffffff;
+$bg-color: #fff;
 $ff-main: 'IBM Plex Sans', serif;
 $tablet-min-width: 640px;
 $desktop-min-width: 1280px;
