--- a/src/styles/blocks/_logo.scss
+++ b/src/styles/blocks/_logo.scss
@@ -8,7 +8,7 @@
 
   display: inline-flex;
   text-align: center;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-size: 30px;
   font-weight: 700;
   line-height: 30px;
