--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -1,7 +1,7 @@
 .menu {
   z-index: 4;
   background-color: #1a5a4c;
-  color: #ffffff;
+  color: #fff;
 
   position: fixed;
   top: 0;
@@ -19,7 +19,6 @@
   }
 
   &__container {
-    position: relative;
     display: flex;
     flex-direction: column;
     max-width: 320px;
@@ -33,6 +32,7 @@
     }
 
     @include on-desktop {
+      position: relative;
       justify-content: center;
       gap: 100px;
       max-width: 1280px;
@@ -42,12 +42,13 @@
   &__close {
     position: absolute;
     z-index: 1;
+
     @include content-margin-top;
     @include content-margin-left;
   }
 
   &__top {
-    padding: 27px 0 24px 0;
+    padding: 27px 0 24px;
     border-bottom: 1px solid #ffffff80;
     font-size: 16px;
 
@@ -67,7 +68,7 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-    padding: 24px 0 27px 0;
+    padding: 24px 0 27px;
     font-size: 14px;
 
     @include on-tablet {
