making events block

--- a/src/styles/blocks/_info.scss
+++ b/src/styles/blocks/_info.scss
@@ -7,6 +7,10 @@
   flex-direction: column;
   justify-content: space-between;
 
+  @include big-phone {
+    gap: 20px;
+  }
+
   &__title {
     font-size: 14px;
     font-weight: 400;
@@ -20,6 +24,12 @@
 
     @include small-tablet {
       gap: 30px;
+    }
+
+    @include big-phone {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 16px;
     }
   }
 
