--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -20,13 +20,13 @@
 
 
   &__menu {
+    overflow-y: auto;
     position: fixed;
     z-index: 3;
     top: 0;
     left: 0;
     width: 100%;
-    min-height: 233px;
-    background-color: $green-color;
+    height: 100%;
     transform: translateY(-101%);
 
     transition: all $transition-value;
