--- a/src/styles/blocks/_modifiers.scss
+++ b/src/styles/blocks/_modifiers.scss
@@ -1,3 +1,7 @@
+.page__body--lock {
+  overflow: hidden;
+}
+
 .icon.icon--burger {
   position: absolute;
   width: $width-burger;
@@ -7,7 +11,11 @@
 
   z-index: 4;
 
-  @include header-top-indent(top);
+  @include header-top-indent(top, $header-padding-top);
+
+  @include big-phone {
+    @include header-top-indent(top, $header-padding-phone);
+  }
 
   &::before,
   &::after {
@@ -93,20 +101,42 @@
   pointer-events: all;
 }
 
+.nav--padding {
+  @include header-top-indent(padding-top, $header-padding-top);
+
+  @include big-phone {
+    @include header-top-indent(padding-top, $header-padding-phone);
+  }
+}
+
+.info--padding {
+  @include header-top-indent(padding-top, $header-padding-top);
+
+  @include big-phone {
+    @include header-top-indent(padding-top, 0);
+  }
+}
+
 .nav__link--menu-setting {
   color: $white-color;
   font-size: 22px;
+
+  @include hover(color, $grey-hover);
 
   @include small-tablet {
     font-size: 16px;
   }
 }
 
-.nav--margin-left {
+.nav__list--margin-left {
   margin-left: 102px;
 
   @include small-tablet {
     margin-left: 57px;
+  }
+
+  @include big-phone {
+    margin-left: 52px;
   }
 }
 
