--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -1,7 +1,15 @@
 .nav {
   max-width: 368px;
   width: 100%;
-  min-height: 96px;
+
+  @include nav-heigth;
+
+  @include big-phone {
+    max-width: 100%;
+    position: sticky;
+    top: 0;
+    background-color: $green-color;
+  }
 
   &__list {
     display: flex;
@@ -11,15 +19,20 @@
     @include small-tablet {
       max-width: 220px;
     }
+
+    @include phone {
+      max-width: 100%;
+    }
   }
 
   &__column {
     max-width: 168px;
     width: 100%;
-    min-height: 96px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    @include nav-heigth;
   }
 
   &__link {
@@ -30,5 +43,6 @@
 
   &__link-text {
     line-height: 100%;
+    font-weight: 500;
   }
 }
