--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -2,6 +2,7 @@ $transition-value: 0.3s;
 $white-color: #fff;
 $black-color: #0F0E08;
 $green-color: #1A5A4C;
+$grey-hover: #999;
 $height-burger: 12px;
 $width-burger: 18px;
 $height-burger-line: 2px;
@@ -11,3 +12,7 @@ $position-burger-line: ($height-burger / 2) - ($height-burger-line / 2) + $burge
 $header-top-padding: 9px;
 $arrow-link-in-elements: header__link;
 $header-padding-top: 39px;
+$header-padding-phone: 27px;
+$nav-heigth: 96px;
+$nav-heigth-small: 72px;
+$separator-top: $nav-heigth-small + $header-padding-phone;
