add task solution

--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,55 @@
 %h1 {
-  font-family: Roboto, sans-serif;
-  font-weight: 400;
+  margin: 0;
+
+  font-size: 45px;
+  font-weight: 700;
+  line-height: 45px;
+  font-family: Montserrat, sans-serif;
+
+  @include on-tablet {
+    font-size: 54px;
+    line-height: 65px;
+  }
+
+  @include on-desktop {
+    font-size: 72px;
+    line-height: 87px;
+  }
+}
+
+%h3 {
+  margin: 0;
+
+  font-size: 36px;
+  font-weight: 700;
+  color: $main-color;
+  line-height: 36px;
+  font-family: Montserratl, sans-serif;
+
+  @include on-tablet {
+    font-size: 48px;
+    line-height: 48px;
+  }
+}
+
+%h4 {
+  font-size: 28px;
+  line-height: 28px;
+  color: $main-color;
+  font-family: Montserrat, sans-serif;
+
+  @include on-tablet {
+    font-size: 36px;
+    line-height: 36px;
+  }
+}
+
+%a {
+  color: inherit;
+  text-decoration: none;
+}
+
+%p {
+  margin: 0;
+  padding: 0;
 }
