--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,14 @@
 $c-gray: #eee;
+$phone-min-width: 320px;
+$tablet-min-width: 640px;
+$desktop-min-width: 1280px;
+$design-min-width: 1440px;
+$phone-padding-inline: 20px;
+$tablet-padding-inline: 34px;
+$desktop-padding-inline: 55px;
+$phone-column-gap: 20px;
+$tablet-column-gap: 20px;
+$desktop-column-gap: 30px;
+$main-color: #0f0e08;
+$secondary-color: #1a5a4c;
+$animation-speed: 0.5s;
