--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,27 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import './blocks/page';
+@import './blocks/icons';
+@import './blocks/header';
+@import './blocks/buy-tickets';
+@import './blocks/events-button';
+@import './blocks/menu';
+@import './blocks/nav';
+@import './blocks/main';
+@import './blocks/events';
+@import './blocks/lecture';
+@import './blocks/exhibition';
+@import './blocks/section';
+@import './blocks/date';
+@import './blocks/gallery';
+@import './blocks/slider';
+@import './blocks/shedule';
+@import './blocks/subscription';
+@import './blocks/subscription-form';
+@import './blocks/logo';
+@import './blocks/footer';
+@import './blocks/contacts';
 
 body {
   background: $c-gray;
