feat: slider issue

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,23 @@
+@import 'global';
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import 'blocks/header';
+@import 'blocks/top-bar';
+@import 'blocks/nav';
+@import 'blocks/page';
+@import 'blocks/menu';
+@import 'blocks/icon';
+@import 'blocks/work-shedule';
+@import 'blocks/main';
+@import 'blocks/tickets';
+@import 'blocks/events';
+@import 'blocks/gallery';
+@import 'blocks/subscribe';
+@import 'blocks/footer';
 
-body {
-  background: $c-gray;
+.page-body {
+  min-width: 320px;
+  background-color: $bg;
+  font-family: 'IBM Plex Sans', sans-serif;
 }
