--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,52 @@
-$c-gray: #eee;
+// global colors
+$bg: #fff;
+
+// header colors
+$logo: #0f0e08;
+
+// icons colors
+
+$hamburger-bg: #0f0e08;
+$cross-bg: #fff;
+$arrow-bg: #1a5a4c;
+$arrow-border: #1a5a4c;
+
+// menu colors
+$menu-bg: #1a5a4c;
+$menu-bg-vh: #8b8b8c;
+
+// nav colors
+
+$nav-text: #fff;
+$nav-line: #ffffff80;
+
+// work shedule colors
+
+$work-shedule-text: #fff;
+
+// main colors
+$main-text: #0f0e08;
+$section-title: #687480;
+$data-title: #1a5a4c;
+$img-title-after: #f14a27;
+$img-description: #4e4e4e;
+
+// button colors
+$border: #1a5a4c;
+$button-after: #1a5a4c;
+
+// form colors
+$input-after: #f14a27;
+
+// footer colors
+$footer-text: #0f0e08;
+$footer-line: #1a5a4c80;
+
+// screen-width
+
+$tablet-min-width: 568px;
+$desktop-min-width: 1024px;
+
+// calc
+
+$events-padding-inline: 20px;
