--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,3 +11,5 @@
 @import './blocks/logo-link';
 @import './blocks/info';
 @import './blocks/nav';
+@import './blocks/events';
+@import './blocks/title';
