--- a/src/styles/blocks/_events-item.scss
+++ b/src/styles/blocks/_events-item.scss
@@ -13,6 +13,10 @@
     gap: 130px;
   }
 
+  &__img {
+    @include hover(scale, 1.03);
+  }
+
   &__info {
     @include on-tablet {
       max-width: 460px;
@@ -24,28 +28,13 @@
   }
 
   &__category-date {
-    display: flex;
     justify-content: space-between;
-    align-items: center;
-    gap: 30px;
     margin-bottom: 10px;
 
     @include on-tablet {
       justify-content: inherit;
       margin-bottom: 30px;
     }
-  }
-  &__category {
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 16px;
-    color: #687480;
-  }
-  &__date {
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 700;
-    color: #1a5a4c;
   }
   &__info-title {
     margin-bottom: 10px;
