--- a/src/styles/blocks/_icon.scss
+++ b/src/styles/blocks/_icon.scss
@@ -15,4 +15,12 @@
   &--close {
     background-image: url('../img/icons/close.svg');
   }
+
+  &--facebook {
+    background-image: url('../img/icons/facebook.svg');
+  }
+
+  &--instagram {
+    background-image: url('../img/icons/instagram.svg');
+  }
 }
