--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -17,5 +17,8 @@
     font-weight: 500;
     line-height: 16px;
     color: #fff;
+
+    @include hover(color, #f14a27);
+    @include active(color, #f14a27);
   }
 }
