--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,5 +9,12 @@
 @import 'blocks/title-h2';
 @import 'blocks/title-h3';
 @import 'blocks/events-item';
-@import 'sections/header';
-@import 'sections/events';
+@import 'blocks/category-date';
+@import 'blocks/form';
+@import 'blocks/swiper';
+@import 'blocks/header';
+@import 'blocks/events';
+@import 'blocks/announcement';
+@import 'blocks/gallery';
+@import 'blocks/subscription';
+@import 'blocks/footer';
