--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,8 @@
 $c-gray: #eee;
+$font-primary: 'IBM Plex Sans', sans-serif;
+$font-secondary: 'Montserrat', sans-serif;
+$bg-color-secondary: #334563;
+$bg-color-primary: #e0e0e0;
+$title-color: #0F0E08;
+
+
