add task solution

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -3,11 +3,11 @@
   flex-direction: column;
   gap: 60px;
 
-  @include responsive(tablet) {
+  @include on-tablet {
     gap: 64px;
   }
 
-  @include responsive(tablet) {
+  @include on-desktop {
     gap: 104px;
   }
 
@@ -21,7 +21,7 @@
     text-decoration-skip-ink: none;
     margin-bottom: 40px;
 
-    @include responsive(tablet) {
+    @include on-tablet {
       font-size: 48px;
       line-height: 48px;
       text-align: left;
@@ -31,11 +31,11 @@
   &__grid {
     @include page-grid;
 
-    @include responsive(tablet) {
+    @include on-tablet {
       grid-template-columns: repeat(6, 1fr);
     }
 
-    @include responsive(desktop) {
+    @include on-desktop{
       grid-template-columns: repeat(12, 1fr);
     }
   }
@@ -51,11 +51,11 @@
     height: auto;
     object-fit: cover;
 
-    @include responsive(tablet) {
+    @include on-tablet {
       grid-column: span 6;
     }
 
-    @include responsive(desktop) {
+    @include on-desktop{
       grid-column: 1/7;
     }
   }
@@ -67,11 +67,11 @@
     justify-content: center;
     gap: 10px;
 
-    @include responsive(tablet) {
+    @include on-tablet {
       grid-column: span 6;
     }
 
-    @include responsive(desktop) {
+    @include on-desktop {
       grid-column: 9/12;
     }
   }
@@ -96,7 +96,7 @@
       color: #687480;
       text-transform: uppercase;
 
-      @include responsive(tablet) {
+      @include on-tablet {
         font-size: 14px;
         line-height: 14px;
       }
@@ -112,7 +112,7 @@
       text-decoration-skip-ink: none;
       color: #1a5a4c;
 
-      @include responsive(tablet) {
+      @include on-tablet {
         font-size: 14px;
         line-height: 21px;
       }
@@ -130,7 +130,7 @@
     padding: 2px;
     margin: 0;
 
-    @include responsive(tablet) {
+    @include on-tablet {
       font-size: 36px;
       line-height: 36px;
     }
@@ -148,7 +148,7 @@
     margin: 0;
   }
 
-   @include responsive(tablet) {
+   @include on-tablet {
       font-size: 16px;
       line-height: 24px;
     }
