--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -24,5 +24,13 @@
       border-radius: 10px;
       object-fit: cover;
     }
+
+      &--desktop{
+      display: none;
+
+      @include on-desktop {
+        display: flex;
+      }
+    }
   }
 }
