--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -4,5 +4,8 @@ $font-secondary: 'Montserrat', sans-serif;
 $bg-color-secondary: #334563;
 $bg-color-primary: #e0e0e0;
 $title-color: #0F0E08;
-
+  $design-min-width: 1440px;
+  $desktop-min-width: 1280px;
+  $tablet-min-width: 640px;
+  $mobile-min-width: 320px;
 
