--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -7,7 +7,7 @@
   margin-bottom: 70px;
   padding: 0;
 
-  @include responsive(tablet) {
+  @include on-tablet {
     flex-direction: row;
   }
 
@@ -16,7 +16,7 @@
 
     @include content-padding-inline;
 
-    @include responsive(tablet) {
+    @include on-tablet {
       display: grid;
 
       @include page-grid;
@@ -35,14 +35,14 @@
       height: 24px;
       cursor: pointer;
 
-      @include responsive(tablet) {
+      @include on-desktop{
         top: 40px;
         left: 0;
         transform: scale(1.05);
       }
     }
 
-    @include responsive(tablet) {
+    @include on-tablet {
       left: 20px;
     }
   }
@@ -99,14 +99,14 @@
     position: relative;
     margin-bottom: 20px;
 
-    @include responsive(tablet) {
+    @include on-tablet {
       display: grid;
       grid-template-columns: 4/6;
       gap: 30px;
       height: auto;
     }
 
-    @include responsive(desktop) {
+    @include on-desktop {
       display: grid;
       grid-template-columns: 7/12;
       gap: 30px;
@@ -128,7 +128,7 @@
       padding: 0;
       transform: translateX(-50%);
 
-      @include responsive(tablet) {
+      @include on-tablet{
         font-size: 36px;
         line-height: 36px;
       }
@@ -143,14 +143,14 @@
     flex-direction: column;
     justify-content: center;
 
-    @include responsive(tablet) {
+    @include on-tablet {
       display: grid;
       grid-template-columns: 1/3;
       gap: 30px;
       text-align: left;
     }
 
-    @include responsive(desktop) {
+    @include on-tablet {
       display: grid;
       grid-template-columns: 1/6;
       gap: 30px;
@@ -158,7 +158,7 @@
     }
 
     &-title {
-      font-family: Montserrat, sans-serif;
+      font-family: $font-secondary;
       font-size: 54px;
       font-weight: 700;
       line-height: 64.8px;
